[gd_scene load_steps=15 format=3 uid="uid://b4q3npoc5c7fy"]

[ext_resource type="Script" uid="uid://bepsdcjab3t21" path="res://combined_scripts/power_supply.gd" id="1_7lagc"]
[ext_resource type="Script" uid="uid://p0x2f70nn1sy" path="res://combined_scripts/selectable_canvas_group.gd" id="1_80iu8"]
[ext_resource type="Script" uid="uid://bsonh03rfuf2p" path="res://combined_scripts/drag_component.gd" id="3_3yhad"]
[ext_resource type="Texture2D" uid="uid://bi5tvuv5gh5u" path="res://updated_assets/lab_objects/powerbox.svg" id="3_7lagc"]
[ext_resource type="Texture2D" uid="uid://crtq0m4w5xpmy" path="res://updated_assets/icons_and_buttons/plus_symbol.svg" id="7_5dnns"]
[ext_resource type="Script" uid="uid://brj1u83e5o6i6" path="res://combined_scripts/attachment_power_supply_outlet.gd" id="7_07yqv"]
[ext_resource type="Texture2D" uid="uid://bd4nu6l1dgnec" path="res://updated_assets/icons_and_buttons/button_2.svg" id="8_5dnns"]
[ext_resource type="Texture2D" uid="uid://spcel0l2t7ec" path="res://updated_assets/icons_and_buttons/minus_symbol.svg" id="8_07yqv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80iu8"]
size = Vector2(98, 38)

[sub_resource type="CircleShape2D" id="CircleShape2D_k6dxr"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7lagc"]
radius = 7.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_46x6c"]
size = Vector2(48, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_46x6c"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dnns"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="PowerSupply" type="RigidBody2D" node_paths=PackedStringArray("increment_time_button", "decrement_time_button", "increment_volts_button", "decrement_volts_button")]
collision_layer = 0
script = ExtResource("1_7lagc")
increment_time_button = NodePath("Screen/IncrementTime")
decrement_time_button = NodePath("Screen/DecrementTime")
increment_volts_button = NodePath("Screen/IncrementVolts")
decrement_volts_button = NodePath("Screen/DecrementVolts")
metadata/_custom_type_script = "uid://b4dann3kdfg3k"

[node name="SelectableCanvasGroup" type="CanvasGroup" parent="."]
script = ExtResource("1_80iu8")
metadata/_custom_type_script = "uid://p0x2f70nn1sy"

[node name="PowerBox" type="Sprite2D" parent="SelectableCanvasGroup"]
position = Vector2(0, -8)
scale = Vector2(0.174763, 0.174763)
texture = ExtResource("3_7lagc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_80iu8")

[node name="DragComponent" type="Node2D" parent="." node_paths=PackedStringArray("body", "interact_canvas_group")]
script = ExtResource("3_3yhad")
body = NodePath("..")
interact_canvas_group = NodePath("../SelectableCanvasGroup")
metadata/_custom_type_script = "uid://bsonh03rfuf2p"

[node name="StartButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 25.0
offset_top = -8.0
offset_right = 43.0
offset_bottom = 3.0

[node name="StartLabel" type="Label" parent="StartButton"]
layout_mode = 0
offset_left = 1.0
offset_right = 42.0
offset_bottom = 28.0
scale = Vector2(0.388818, 0.388818)
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlusSymbol" type="Sprite2D" parent="."]
position = Vector2(-36, -12)
scale = Vector2(0.0155412, 0.0155412)
texture = ExtResource("7_5dnns")

[node name="MinusSymbol" type="Sprite2D" parent="."]
position = Vector2(-36, 4)
scale = Vector2(0.016, 0.016)
texture = ExtResource("8_07yqv")

[node name="AttachmentPostiveOutlet" type="Area2D" parent="." node_paths=PackedStringArray("selectable_canvas_group")]
position = Vector2(-36, -11)
script = ExtResource("7_07yqv")
selectable_canvas_group = NodePath("../SelectableCanvasGroup")
point_groups = Array[StringName]([&"attachment:contact_wire"])
metadata/_custom_type_script = "uid://ul3h2acp7c3y"
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttachmentPostiveOutlet"]
shape = SubResource("CircleShape2D_k6dxr")
debug_color = Color(0.960415, 0, 0.51616, 0.42)

[node name="AttachmentNegativeOutlet" type="Area2D" parent="." node_paths=PackedStringArray("selectable_canvas_group")]
position = Vector2(-36, 5)
script = ExtResource("7_07yqv")
outlet_charge = 1
selectable_canvas_group = NodePath("../SelectableCanvasGroup")
point_groups = Array[StringName]([&"attachment:contact_wire"])
metadata/_custom_type_script = "uid://ul3h2acp7c3y"
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttachmentNegativeOutlet"]
shape = SubResource("CircleShape2D_7lagc")
debug_color = Color(0.799247, 0.420694, 0.0500949, 0.42)

[node name="ZoomCamera" type="Camera2D" parent="."]
zoom = Vector2(4.5, 4.5)
position_smoothing_speed = 20.0

[node name="Screen" type="Area2D" parent="."]
metadata/_edit_group_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Screen"]
position = Vector2(-2, -3)
shape = SubResource("RectangleShape2D_46x6c")

[node name="TimeContainer" type="PanelContainer" parent="Screen"]
offset_left = -24.0
offset_top = -11.0
offset_right = 83.0
offset_bottom = 10.0
scale = Vector2(0.3, 0.3)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_46x6c")
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Screen/TimeContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TimeString" type="Label" parent="Screen/TimeContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/outline_size = 0
text = "Time:"

[node name="Time" type="Label" parent="Screen/TimeContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "0:00"

[node name="VoltageContainer" type="PanelContainer" parent="Screen"]
offset_left = -24.0
offset_top = -2.0
offset_right = 83.0
offset_bottom = 19.0
scale = Vector2(0.3, 0.3)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5dnns")
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Screen/VoltageContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VoltageString" type="Label" parent="Screen/VoltageContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Voltage:"

[node name="Volts" type="Label" parent="Screen/VoltageContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "0"

[node name="VLabel" type="Label" parent="Screen/VoltageContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "V"

[node name="IncrementTime" type="TextureButton" parent="Screen"]
self_modulate = Color(0.982343, 0.982342, 0.982342, 1)
offset_left = 11.0
offset_top = -13.0
offset_right = 1035.0
offset_bottom = 755.0
scale = Vector2(0.00813575, 0.00813575)
size_flags_horizontal = 4
mouse_filter = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_5dnns")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Screen/IncrementTime"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -176.0
offset_right = 64.0
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 300
text = "^"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DecrementTime" type="TextureButton" parent="Screen"]
self_modulate = Color(0.980392, 0.980392, 0.980392, 1)
offset_left = 11.0
offset_top = -9.0
offset_right = 1035.0
offset_bottom = 759.0
scale = Vector2(0.00813575, 0.00813575)
size_flags_horizontal = 4
mouse_filter = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_5dnns")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Screen/DecrementTime"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 102.57
offset_top = 230.57
offset_right = 307.57
offset_bottom = 761.57
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
theme_override_font_sizes/font_size = 300
text = "^"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IncrementVolts" type="TextureButton" parent="Screen"]
self_modulate = Color(0.980392, 0.980392, 0.980392, 1)
offset_left = 11.0
offset_top = -4.0
offset_right = 1035.0
offset_bottom = 764.0
scale = Vector2(0.00813575, 0.00813575)
size_flags_horizontal = 4
mouse_filter = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_5dnns")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Screen/IncrementVolts"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -176.0
offset_right = 64.0
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 300
text = "^"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DecrementVolts" type="TextureButton" parent="Screen"]
self_modulate = Color(0.980392, 0.980392, 0.980392, 1)
offset_left = 11.0
offset_right = 1035.0
offset_bottom = 768.0
scale = Vector2(0.00813575, 0.00813575)
size_flags_horizontal = 4
mouse_filter = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_5dnns")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Screen/DecrementVolts"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 102.57
offset_top = 230.57
offset_right = 307.57
offset_bottom = 761.57
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
theme_override_font_sizes/font_size = 300
text = "^"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
editor_description = "Used to change how fast the values of Time and Voltage increases or decreases"
wait_time = 0.15

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="object_placed" from="AttachmentPostiveOutlet" to="AttachmentPostiveOutlet" method="_on_object_placed"]
[connection signal="object_removed" from="AttachmentPostiveOutlet" to="." method="unplug_handler"]
[connection signal="wire_connected" from="AttachmentPostiveOutlet" to="." method="_on_wire_connected"]
[connection signal="object_placed" from="AttachmentNegativeOutlet" to="AttachmentNegativeOutlet" method="_on_object_placed"]
[connection signal="object_removed" from="AttachmentNegativeOutlet" to="." method="unplug_handler"]
[connection signal="wire_connected" from="AttachmentNegativeOutlet" to="." method="_on_wire_connected"]
[connection signal="input_event" from="Screen" to="." method="_on_screen_input_event"]
[connection signal="mouse_entered" from="Screen" to="." method="_on_screen_mouse_entered"]
[connection signal="mouse_exited" from="Screen" to="." method="_on_screen_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
